Fixes #7, follows Debilski's suggestion to update stylesheets to prevent ugly line-wrapping on labels.

--- a/resources/stylesheets/base.css
+++ b/resources/stylesheets/base.css
@@ -86,3 +86,7 @@
 	    clear: both;
 	    padding: 10px 0 20px;
 	}
+	
+	.label {
+		white-space: nowrap;
+	}
